--- a/full-stack.html
+++ b/full-stack.html
@@ -46,8 +46,8 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/labineassociates/job/xa93zccupzt1r1whzxewkzrzwa'>Fullstack engineer for a start-up in San Francisco | Job Opportunities</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='https://jobs.crelate.com/portal/labineassociates/job/xa93zccupzt1r1whzxewkzrzwa'>Fullstack engineer for a start-up in San Francisco | Job Opportunities</a></h5> 
+<p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assist-rx.workable.com/j/FE4000554C'>AssistRx - Jobs: Full Stack Developer - Apply online</a></h5> 
+<h5><a href='https://assist-rx.workable.com/j/FE4000554C'>AssistRx - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -187,7 +187,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -248,7 +248,7 @@ Stack Developer to join our digital delivery team as they build a solution for a
 <p>Jul 14, 2019 ... Express your creativity in Developer Choice competitions, with the opportunity to 
 win prizes and recognition from your peers. Required Qualifications: Minimum 3?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692241631-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692241631-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -278,11 +278,11 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adroll/jobs/1787963'>Job Application for Senior Full Stack Engineer, Web Applications at AdRoll Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adroll/jobs/1787963'>Job Application for Senior Full Stack Engineer, Web Applications at AdRoll Group</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dvele/a7ce2c6c-11f4-4f7f-bc9f-20f735157c9a'>Dvele - Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dvele/a7ce2c6c-11f4-4f7f-bc9f-20f735157c9a'>Dvele - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -292,7 +292,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/software-development-engineer-full-stack-lisboa-or-porto'>
+<h5><a href='https://definedcrowd.recruitee.com/o/software-development-engineer-full-stack-lisboa-or-porto'>
       Software Development Engineer (Full Stack) - Lisboa or Porto - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
@@ -310,7 +310,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
+<h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -336,7 +336,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://dedge.recruiterbox.com/jobs/fk03fr7/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedge.recruiterbox.com/jobs/fk03fr7/'>
     D?veloppeur Fullstack PHP/Javascript Junior (H/F) at D-EDGE
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -380,7 +380,7 @@ Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?.
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Full Stack Engineer (Javascript) at KNOREX.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/B6274B3760'>OneinaMil - Jobs: Full Stack Engineer (PHP/Vue.JS) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B6274B3760'>OneinaMil - Jobs: Full Stack Engineer (PHP/Vue.JS) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Full Stack Engineer (PHP/Vue.JS) at OneinaMil.</p>
 <hr/>
@@ -432,7 +432,7 @@ the job details and apply today!</p>
 <p>1 day ago ... Apply online for the job of Senior Back End Java Developer (Full Stack) at Youtap 
 Limited.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
+<h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Full Stack Developer at Food52.</p>
 <hr/>
@@ -452,7 +452,7 @@ Limited.</p>
 machine learning engineers, to craft and implement new product features. You 
 also?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
